                                                         -*- coding: utf-8 -*-
  Changes with Apache Traffic Server 3.3.2


  *) [TS-1660] Host field should not has c style terminator.

  *) [TS-1627] Support requests with payload

  *) [TS-1763] add Arch Linux config.layout
   Author: Galen Sampson <galen.sampson@gmail.com>

  *) [TS-1749] Stats cluster values among nodes are not consistent.
   Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1758] Remove unused overviewPage aggregation functions.
   Author: Yunkai Zhang.

  *) [TS-1748] add jtest to the build

  *) [TS-1730] Supporting First Byte Flush for ESI plugin
   Author: Shu Kit Chan <chanshukit@gmail.com>

  *) [TS-1745] fix typos
   Author: Benjamin Kerensa <bkerensa@ubuntu.com>

  *) [TS-1671] remove AlarmListable from overviewRecord
   Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1740] Improve precision of stats values
   Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1742] Freelists to use 64bit version w/ Double Word Compare and Swap

  *) [TS-1356] Ability to set thread affinity with multiple modes


  Changes with Apache Traffic Server 3.3.1

  *) [TS-1743] Implement our own hash mechanism for traffic_logstats, since
   C++11 does not provide a sensical hash<const char*>.

  *) [TS-1628] In validate_unmapped_url(), pristine_url can be invalid().

  *) [TS-1714] Fix some build problems for gcc v4.8.

  *) [TS-1626] remove WUTS proxy code
   Author: Uri Shachar <ushachar@hotmail.com>

  *) [TS-1741] add plugins examples to the build

  *) [TS-1058] add TSHttpTxnCloseAfterResponse experimental API
   Author: Yakov Kopel <ykopel@websense.com>

  *) [TS-1733] Retool tsxs so that it can compile multiple source files
   Author: Dale Ghent <daleg@omniti.com>

  *) [TS-1738] proxy.cluster.cache_total_hits_mem is missing in RecordsConfig
   Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1739] Fix TODO within varFloatFromName()
   Author: Yunkai Zhang <qiushu.zyk@taobao.com>
