@@ -1,7 +1,16 @@
 # Virtual IP Address Configuration
 #
 # The purpose of this file is to specify virtual IP addresses
-# for Traffic Server.
+# for Traffic Server. This DOES NOT actually bind to these
+# addresses; ATS either listens to all or the address specified
+# through proxy.local.incoming_ip_to_bind.
+#
+# The vips specified here will be verified and broadcast across
+# the cluster. Any conflicts will be logged as errors.
+#
+# In order to enable these checks you must also set:
+#     CONFIG proxy.config.vmap.enabled INT 1
+# In records.conf
 #
 # UNIX
 #   Format:
