@@ -2,6 +2,9 @@
   Changes with Apache Traffic Server 3.3.2
 
 
+  *) [TS-1735] Remove dead code that invokes missing vmap_config tool
+   Author: John Kew <john.v.kew.ii@gmail.com>
+
   *) [TS-1660] Host field should not has c style terminator.
 
   *) [TS-1627] Support requests with payload
